--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
 
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'" />
+    <!--
+      https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP
+
+      If you want restrict the sources from where you can load resources:
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'" />
+    -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' *; script-src 'self' *; style-src 'self' 'unsafe-inline' *;" />
   </head>
 
   <body>
